llm/llm-whisper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-whisper-service
  namespace: llm
  labels:
    app: llm-whisper
spec:
  type: NodePort
  selector:
    app: llm-whisper
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    nodePort: 30890
